# NMR

./: main.py  pyproject.toml
.github/workflows/: ci.yml
src/nmr_analysis/analysis/: fitting.py  models.py  processing.py
src/nmr_analysis/cli/: commands.py  main.py
src/nmr_analysis/core/: __init__.py  types.py
src/nmr_analysis/gui/: app.py
src/nmr_analysis/io/: __init__.py  loader.py  reporting.py
tests/: test_analysis.py  test_io.py
