[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmr-analysis"
version = "0.1.0"
description = "A project for analyzing T1, T2, and T2* NMR experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.4",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "nicegui>=3.4.0",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyqt6>=6.10.1",
    "pyqtgraph>=0.14.0",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
nmr = "nmr_analysis.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
